Fixed alignment for phone number.

--- a/src/App.scss
+++ b/src/App.scss
@@ -71,3 +71,10 @@ a {
 .cursor-pointer {
   cursor: pointer;
 }
+
+.react-phone-number-input__icon {
+  border: none !important;
+  & > img {
+    vertical-align: unset;
+  }
+}
